--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ p {
 }
 .btn-primary {
   background-color: #17a2b8;
+  border: none;
 }
 .fa-map-marker-alt {
   color: white;
@@ -113,7 +114,7 @@ p {
 
 .weather-app {
   border: 1px solid gray;
-  padding: 30px 60px 30px 30px;
+  padding: 30px 30px 0px 30px;
   border-radius: 10px;
   width: 500px;
 }
@@ -127,6 +128,6 @@ p {
   bottom: 50px;
 }
 .footer {
-  position: relative;
-  left: 135px;
+  margin-top: 30px;
+  text-align: center;
 }
