--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,19 @@ h3 {
 .fas {
   font-size: 100px;
 }
+.day {
+  color: #0fc0db;
+}
+.night {
+  color: #073d44;
+}
+.cloud {
+  color: #315054;
+}
+.fa-snowflake {
+  color: #85cbd3;
+}
+
 .fa-sun {
   color: yellow;
 }
