--- a/src/styles.css
+++ b/src/styles.css
@@ -59,12 +59,14 @@ p {
 #current-location-button {
   position: relative;
   right: 30px;
+  border: none;
 }
 .fa-map-marker-alt {
   color: white;
   font-size: 20px;
   position: relative;
-  right: 8px;
+  right: 7px;
+  top: 2px;
 }
 
 .weather-app {
@@ -99,3 +101,7 @@ p {
 
 .active:hover {
   text-decoration: none;
+}
+.footer {
+  margin-left: 20px;
+}
